<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Poll-A-Bear</string>
    <string name="parse_app_id">fIMTZeRdRFzApojrn5KYukKM5RlxOQEoOuuz5JDO</string>
    <string name="parse_client_key">59WOQGezGmeOP3xcWrWm5RUeH4uJ1QgQaob4VSq2</string>
    <string name="facebook_app_id">542217172588927</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Polls</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">New Poll</string>
    <string name="tap">Tap Here</string>
    <string name="new_poll">Create a new poll!</string>
    <string name="question">Enter Question</string>
    <string name="option">Enter Option</string>
    <string name="title_activity_login">Sign In</string>
    <string name="title_activity_create_poll">New Poll</string>
    <string name="facebook_login_button_text">Log in with Facebook</string>
    <string name="email_signup_button_text">Sign up with email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_text_poll">TextPollActivity</string>
    <string name="title_activity_select_friends">Choose friends</string>
    <string name="title_activity_text_response">TextResponseActivity</string>
    <string name="title_activity_photo_response">PhotoResponseActivity</string>
    <string name="title_activity_chart">ChartActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="signIn_btn">Submit</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>
